[package]
name = "tool"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]

edition = "2018"

[dependencies]
fdns-format = { path = "../../fdns/format" }
namespace = { path = "../namespace" }

anyhow = "1"
byteorder = "1"
cast = "0.2"
hex = "0.3"
itertools = "0.7"
log = "0.4"
mio = "0.6"
pcap-file = "0.10"
pretty_env_logger = "0.2"
rand = "0.7"
