[package]
name = "tool"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]

edition = "2018"

[dependencies]
fdns-format = { path = "../../fdns/format" }
namespace = { path = "../namespace" }

anyhow = "1"
byteorder = "1"
cast = "0.2"
hex = "0.4"
itertools = "0.9"
log = "0.4"
mio = "0.6"
pcap-file = "1"
pretty_env_logger = "0.4"
rand = "0.7"
